# task_velocity_damping

./: CMakeLists.txt  README.md  package.xml
cmake/: base.cmake
include/dynamic-graph/TaskVelocityDamping/: SignalHelper.h  TaskVelocityDamping.hh
python/: romeo_ros_taskveldamp.py
src/: CMakeLists.txt  TaskVelocityDamping.cpp
src/dynamic_graph/sot/core/: meta_task_dynamic_velocity_damping.py  meta_task_opmod_velocity_damping.py  meta_task_velocity_damping.py
src/dynamic_graph/sot/core/task_velocity_damping/: __init__.py
